# MagDragClangTidyChecks

./: CMakeLists.txt  INTEGRATION.md  README.md
.github/workflows/: publish.yml
cmake/: MagDragChecksConfig.cmake  MagDragClangTidyChecksConfig.cmake
include/: Version.h.in
src/: magDragNamingCheck.cpp
src/inc/: magDragNamingCheck.h
